# workshops

./: .gitignore  README.md  readme.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker.yaml
magic-8-ball/: 00-setup.md  01-getting-started.md  02-json-api.md  03-spin-ai.md  04-frontend.md  05-spin-kv.md  06-deploy-fermyon-cloud.md  06-deploy.md  07-external-db.md  08-embedding-and-sqlite.md  08-kubernetes.md  09-spin-sqlite.md  README.md
magic-8-ball/apps/03-spin-ai/magic-eight-ball-rust/: Cargo.toml  spin.toml
magic-8-ball/apps/frontend/: index.html
spin/: 00-setup.md  01-getting-started.md  02-json-api.md  02b-json-api-openai.md  03-frontend.md  03-spin-ai.md  03b-openai.md  04-deploy-fermyon-cloud.md  04-frontend.md  04-spin-kv.md  05-deploy-fermyon-cloud.md  05-external-db.md  05-spin-kv.md  06-deploy-fermyon-cloud.md  06-external-db.md  07-external-db.md  07-fermyon-ai.md  07-kubernetes.md  08-kubernetes.md  09-spin-sqlite.md
spin/apps/06-external-db/magic-8-ball-rust/: Cargo.toml  spin.toml
wasm-and-containers/: README.md
wasm-and-containers/my_application/: package.json  spin.toml
wasm-and-containers/workshop/: 00-setup.md  01-spin-getting-started.md  02-key-value-store.md  02-run-your-first-wasm-on-k3d.md  02-running-in-a-container.md  02a-runwasi-and-k3d.md  03-deploy-spin-to-k8s.md  03-local-dev-setup-containers-wasm.md  04-azure-kubernetes-service.md  04-civo-kubernetes.md  04-kubernetes-and-spinkube.md  04-magic-8-ball.md  04b-civo-kubernetes.md  05-azure-kubernetes-service.md  optional-05-slight-101.md  optional.md
(+178 files in other folders)
