[package]
name = "magic-eight-ball"
authors = ["Fermyon Engineering <engineering@fermyon.com>"]
description = "A Magic 8 Ball App"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Library to get random response
rand = "0.8.5"
# The Spin SDK.
spin-sdk = "2.2.0"

[workspace]
